feat: implement card and card section domains with full CRUD support and API integration